--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
     </script>
 
     <style>
+        body {
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            font: bold 40px "Helvetica Neue", Helvetica, sans-serif;
+            margin: 0 0 10px 0;
+        }
         table {
             border-collapse: collapse;
-            margin: 50px;
         }
         td {
             font-family: "Helvetica Neue", Helvetica, sans-serif;
